# rust-simple-chess

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/chess_core/: Cargo.toml
crates/chess_core/src/: board.rs  fen.rs  game.rs  lib.rs  piece.rs  square.rs
crates/chess_gui/: Cargo.toml
crates/chess_gui/src/: app.rs  assets.rs  end_screen.rs  game_view.rs  lib.rs
src/: main.rs
